作业批改标注功能实现

--- a/drawingboard/check-bak.html
+++ b/drawingboard/check-bak.html
@@ -49,9 +49,9 @@
 
     </div>
 
-    <script src="https://cdn.bootcss.com/jquery/2.1.4/jquery.min.js"></script>
-    <script src="https://cdn.bootcss.com/fabric.js/2.1.0/fabric.min.js"></script>
-    <script src="js/check.js"></script>
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/fabric.min.js"></script>
+    <script src="js/check-bak.js"></script>
     <script src="js/canvasZoom.js"></script>
     <script src="https://unpkg.com/qiniu-js@2.2.2/dist/qiniu.min.js"></script>
     <script src="http://cdn.staticfile.org/semantic-ui/2.3.1/semantic.js"></script>
