--- a/drawingboard/check.html
+++ b/drawingboard/check.html
@@ -93,7 +93,7 @@
                     <i class="before_icon fn-left"></i>
                     <div>字迹评分</div>
                 </div>
-                <div class="main_score_num_list fn-clear">
+                <div id="fontScore" class="main_score_num_list fn-clear">
                     <div class="main_score_num_item fn-left">1</div>
                     <div class="main_score_num_item fn-left">2</div>
                     <div class="main_score_num_item fn-left">3</div>
@@ -106,15 +106,15 @@
                     <div class="main_score_num_item fn-left">10</div>
                 </div>
             </div>
-            <div class="small_btn_blue confirm">
+            <div id="subBut" class="small_btn_blue confirm">
                 确认完成
             </div>
-            <div class="more_btn"></div>
-            <div class="other_btn_wrap fn-hide">
-                <div class="mark_exce">
+            <div id="moreBtn" class="more_btn"></div>
+            <div id="moreDiv" class="other_btn_wrap fn-hide">
+                <div id="expBtn" class="mark_exce">
                     异常标记
                 </div>
-                <div class="give_up">
+                <div id="giveupBtn" class="give_up">
                     放弃任务
                 </div>
             </div>
@@ -130,7 +130,6 @@
         </div>
         <div class="view">
             <div id="canvasDiv" class="swiper-container center-self">
-                <!-- <canvas id="c0" height="1100" width="825">请使用支持HTML5的浏览器</canvas> -->
             </div>
         </div>
     </div>
@@ -153,31 +152,22 @@
         </div>
     </div>
 </body>
-<script type="text/javascript" src="../js/check/JSfontsize.js"></script>
+<script type="text/javascript" src="../js/check/fontsize.js"></script>
 <script type="text/javascript" src="../js/jquery.min.js"></script>
-<script type="text/javascript" src="../js/check/Rivets.js"></script>
-<script type="text/javascript" src="../js/check/tool.js"></script>
 <script type="text/javascript" src="js/fabric.min.js"></script>
-<script type="text/javascript" src="js/check/check.js"></script>
+<script type="text/javascript" src="js/check/canvas.js"></script>
+<script type="text/javascript" src="js/tools/md5.min.js"></script>
+<script type="text/javascript" src="js/tools/uuid.js"></script>
 
 <script type="text/javascript">
-
-
     jQuery(function () {
-
+        var canvasInit = []; //已经初始化的canvas
+        var uploadImage = []; //需要上传的图片集合{"name":"xxx","base64":"xxx"}
         var errTagType = {
             '语文': ['遗漏', '理解不清晰', '粗心大意', '审题不清', '基础不牢', '积累不够', '运用错误', '区分错误', '缺乏逻辑'],
             '数学': ['计算错误', '审题错误', '遗漏', '基础不牢固', '粗心大意', '概念不清', '换算错误', '公式不熟练', '缺乏解题技巧', '书写不端正'],
             '英语': ['粗心大意', '审题错误', '基础不牢固', '书写不规范', '单词拼写错误', '遗漏', '介词搭配错误', '单复数错误']
         };
-
-        //获取url中的参数
-        function getUrlParam(name) {
-            var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)");
-            var r = window.location.search.substr(1).match(reg);
-            if (r != null) return decodeURI(r[2]);
-            return null;
-        }
 
         var img = decodeURIComponent(getUrlParam('img')); //图片集合
         var subject = decodeURIComponent(getUrlParam('subject')); //科目
@@ -185,28 +175,30 @@
             alert("网络错误");
         }
         img = JSON.parse(img);
-
         var simgEle = "";
         for (var i = 0; i < img.length; i++) {
-            jQuery("#canvasDiv").append('<canvas id="c' + i + '" height="1100" width="825"></canvas>');
             if (i == 0) {
+                jQuery("#canvasDiv").append('<canvas id="c0" height="1100" width="825"></canvas>');
+                canvasInit.push("c0");
                 switchCanvas(img[i].i, 0);
                 simgEle += '<div class="swiper-slide swiper-slide-visible swiper-slide-active active-nav">';
             } else {
                 simgEle += '<div class="swiper-slide swiper-slide-visible">';
             }
-            simgEle += '<div class="slide_inner">' +
-                '<img src="' + img[i].s + '" class="center-self"></div></div>';
-
+            simgEle += ('<div class="slide_inner"><img src="' + img[i].s + '" class="center-self"></div></div>');
         }
-
-
-
         jQuery("#simgDiv").append(simgEle);
 
+        //点击缩略图
         jQuery(".swiper-slide-visible").on("click", function () {
+            var _index = jQuery(this).index(),
+                _cid = "c" + _index;
+            if (canvasInit.indexOf(_cid) == -1) {
+                jQuery("#canvasDiv").append('<canvas id="' + _cid + '" height="1100" width="825"></canvas>');
+                canvasInit.push(_cid);
+            }
             jQuery(this).addClass("active-nav").siblings().removeClass("active-nav");
-            switchCanvas(img[jQuery(this).index()].i, jQuery(this).index());
+            switchCanvas(img[_index].i, _index);
         });
 
         //隐藏弹窗
@@ -244,7 +236,159 @@
             jQuery("#errModal").addClass("fn-hide");
         });
 
+        //绑定工具事件
+        jQuery("#tools").find(".handle_btn").on("click", function () {
+            //设置样式
+            jQuery(this).addClass("active").siblings().removeClass("active");
+            drawType = jQuery(this).attr("data-type");
+            // window.drawType = drawType;
+            canvas.isDrawingMode = false;
+            if (drawType == "pen") {
+                canvas.isDrawingMode = true;
+            } else if (drawType == "remove") {
+                canvas.selection = true;
+                canvas.skipTargetFind = false;
+                canvas.selectable = true;
+            } else if (drawType == "help") {
+                jQuery("#c").toggleClass("fn-hide");
+            }
+            else {
+                canvas.skipTargetFind = true; //画板元素不能被选中
+                canvas.selection = false; //画板不显示选中
+            }
+        });
 
+        //提交作业
+        jQuery("#subBut").on("click", function () {
+            var fs = jQuery("#fontScore").find("div.active").index() + 1;
+            if (fs <= 0) {
+                alert("操作失败，请先选择字迹评分！");
+                return false;
+            }
+            if (confirm("确认作业批改完成？")) {
+                var paramJson = {
+                    "pages": [],
+                    "font": fs,
+                    "callback": {}
+                };
+                for (var i = 0; i < canvasArr.length; i++) {
+                    if (canvasArr[i]) {
+                        var canvasJson = {
+                            "question": [],
+                            "page": {
+                                "img": "",
+                                "imgorg": "",
+                                "w": 0,
+                                "h": 0,
+                                "index": i
+                            }
+                        };
+                        //     "question": [
+                        //         {
+                        //             "r": 0,
+                        //             "w": 0,
+                        //             "sr": 2,
+                        //             "sw": 3,
+                        //             "eimg": "http://www.baidu.com/log.png",
+                        //             "err": [
+                        //                 {
+                        //                     "id": 1,
+                        //                     "desc": "审题不清,技巧不清",
+                        //                     "x": 12,
+                        //                     "y": 12
+                        //                 }
+                        //             ]
+
+                        var objs = canvasArr[i].getObjects();
+                        var checkObj = [];
+                        for (var i = 0; i < objs.length; i++) {
+                            if (objs[i].type && objs[i].type != 'image') {
+                                checkObj.push(objs[i]);
+                            } else {
+                                canvasJson.page.imgorg = objs[i]._element.src;
+                                canvasJson.page.w = objs[i].width;
+                                canvasJson.page.h = objs[i].height;
+                                //TODO:上传正在批改图
+                            }
+                        }
+
+                        checkObj.sort(function (x, y) { return x.top - y.top; }); //根据控件top排序
+
+                        var checkJson = [];
+                        var itemSmallRight = 0, itemSmallWrong = 0, prevSmallType = true;
+                        for (var i = 0; i < checkObj.length; i++) {
+                            switch (checkObj[i].type) {
+                                case 'smallright':
+                                    ++itemSmallRight;
+                                    break;
+                                case 'smallwrong':
+                                    ++itemSmallWrong;
+                                    break;
+                                case 'right':
+                                case 'wrong':
+                                case 'rectangle': //框
+                                    prevSmallType = false;
+                                    break;
+                                default:
+                                    break;
+                            }
+                            if (prevSmallType == false || i == (checkObj.length - 1)) {
+                                //上一个为整题对/错 || 最后一题
+                                if (itemSmallRight > 0 || itemSmallWrong > 0) {
+                                    checkJson.push({ 'r': 0, 'w': 0, 'sr': itemSmallRight, 'sw': itemSmallWrong, 'url': '' });
+                                    itemSmallRight = 0, itemSmallWrong = 0;
+                                }
+                                prevSmallType = true;
+                            }
+                            //录入本次大题
+                            if (checkObj[i].type == 'right') {
+                                checkJson.push({ 'r': 1, 'w': 0, 'sr': 0, 'sw': 0, 'url': '' });
+                            } else if (checkObj[i].type == 'wrong') {
+                                checkJson.push({ 'r': 0, 'w': 1, 'sr': 0, 'sw': 0, 'url': '' });
+                            }
+                            //圈定的错图上传
+                            if (checkObj[i].type == 'rectangle') {
+                                toImgUpload(checkObj[i], checkObj[i].left, checkObj[i].top, checkObj[i].width, checkObj[i].height);
+                            }
+                        }
+                        paramJson.pages.push(canvasJson);
+                    } else {
+                        //这里的图片没有点击初始化
+                    }
+                }
+
+            }
+        });
+        //更多操作
+        jQuery("#moreBtn").on("click", function () {
+            jQuery("#moreDiv").toggleClass("fn-hide");
+        });
+        //异常订单
+        jQuery("#expBtn").on("click", function () {
+            jQuery("#moreDiv").toggleClass("fn-hide");
+            if (confirm("确认为异常订单？")) {
+                //TODO:业务
+            }
+        });
+        //放弃订单
+        jQuery("#giveupBtn").on("click", function () {
+            jQuery("#moreDiv").toggleClass("fn-hide");
+            if (confirm("确认为放弃订单？")) {
+                //TODO:业务
+            }
+        });
+        //字体打分
+        jQuery("#fontScore").find("div").on("click", function () {
+            jQuery(this).addClass("active").siblings().removeClass("active");
+
+        });
+        //获取url中的参数
+        function getUrlParam(name) {
+            var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)");
+            var r = window.location.search.substr(1).match(reg);
+            if (r != null) return decodeURI(r[2]);
+            return null;
+        }
     });
 
 
